# dmenu-polkit

./: README.md  dmenu-polkit.desktop  listener.c  meson.build
src/: listener.h  main.c  util.c  util.h
